k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: chat.local
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 3001
          - path: /groups
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 3001
          - path: /chat
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 3001
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-backend
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-frontend
                port:
                  number: 3000
